app-tel (0.2015.08) unstable; urgency=medium

  * You can now use the -x command line argument multiple times to run
    multiple script files on a device
  * Support for http://passwordstore.org

 -- Robert Drake <rdrake@cpan.org>  Tue, 08 Sep 2015 00:45:50 -0400

app-tel (0.2015.07) unstable; urgency=medium

  * bump because color tests were broken (not sure why make test was passing here)

 -- Robert Drake <rdrake@cpan.org>  Wed, 12 Aug 2015 18:01:36 -0400

app-tel (0.2015-06) unstable; urgency=medium

  * added support for PWSafe3 password safes
  * changed keyring support slightly.  You may be prompted once to re-enter
    your passphrase if you're storing your keepass passphrase in the keyring.

 -- Robert Drake <rdrake@cpan.org>  Mon, 10 Aug 2015 17:32:41 -0400

app-tel (0.2015-05) unstable; urgency=medium

  * fix for NetAddr::IP being required

 -- Robert Drake <rdrake@cpan.org>  Thu, 21 May 2015 10:21:24 -0400

app-tel (0.2015-04) unstable; urgency=medium

  * moved all HostRange logic into HostRange module

 -- Robert Drake <rdrake@cpan.org>  Mon, 23 Mar 2015 11:08:26 -0400

app-tel (0.2015-03) unstable; urgency=medium

  * Fix for NetAddr::IP check in tests
  * lowered version requirement for Test::More so debian will be happy

 -- Robert Drake <rdrake@cpan.org>  Sun, 22 Mar 2015 14:53:43 -0400

app-tel (0.2015-02) unstable; urgency=medium

  * Added support for HostRanges
  * fixed documentation for Keepass and Keyrings

 -- Robert Drake <rdrake@cpan.org>  Sat, 21 Mar 2015 10:10:34 -0400

app-tel (0.2015-01) unstable; urgency=medium

  * moved handlers to App::Tel to fix them
  * changed timeout for -x, -c, and -a to use configured timeout rather than
    10 seconds.  This should fix some slow scripts.
  * removed "term len 0" from default pagercmd.  It is now specified via telrc
    profile.  THIS MAY BREAK YOUR SCRIPTS, UPDATE TELRC IF NEEDED.
  * perlcritic fixes

 -- Robert Drake <rdrake@cpan.org>  Thu, 15 Jan 2015 20:38:28 -0500
