@@ -1,6 +1,6 @@
 use lib qw(lib);
 use Test::More;
-plan tests => 10;
+plan tests => 11;
 use_ok('App::Tel');
 use_ok('App::Tel::HostRange');
 use_ok('App::Tel::Passwd');
@@ -11,4 +11,4 @@ use_ok('App::Tel::Color::Base');
 use_ok('App::Tel::Color::Cisco');
 use_ok('App::Tel::Color::CiscoPingRainbow');
 use_ok('App::Tel::Color::CiscoLog');
-
+use_ok('App::Tel::Macro');
